# tradeyoda

./: .gitignore  1  @  README.md  backend_entrypoint.py  build_backend.sh  docker-compose.yml  option_test.py  orchestrator.py  pyproject.toml  requirements.txt  setup.py  test_dhan_positions.py  tradeyoda-backend.spec
.emergent/: emergent.yml  summary.txt
app/: init.py  streamlit_app.py
app/components/: charts.py  init.py  metrics.py
app/pages/: 1_📊_Dashboard.py  2_🎯_Active_Trades.py  3_📈_Analysis.py  4_⚙️_Settings.py  (+1 more)
backend/: main.py  middleware.py
cache/: .license_cache  .license_key
data/: .gitkeep  credentials.json
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js  update_gui.sh
licensing-server/: .env  .env.example  .gitignore  DELETE_LICENSES_GUIDE.md  PUSH_TO_GITHUB.md  README.md  SETUP_GUIDE.md  database.py  encryption.py  licensing.db  models.py  requirements.txt  server.py  setup_initial_data.py  utils.py
logs/: .gitkeep
src/: config.py  init.py
test_responses/: funds.json  holdings.json  trade_history.json
tests/: conftest.py  init.py  test_data_agent.py  test_integration.py  test_technical_agent.py
tradeyoda-desktop/: CIRCULAR_IMPORT_FIX.md  CROSS_PLATFORM_BUILD.md  DESKTOP_PACKAGING_GUIDE.md  ELECTRON_PROJECT_STRUCTURE.md  LICENSING_CONFIGURATION.md  PACKAGING_SEPARATION.md  PHASE1_BACKEND_SETUP.md  PRE_BUILD_CHECKLIST.md  PYINSTALLER_WARNINGS_ANALYSIS.md  QUICK_START.md  README.md  TESTING_GUIDE.md  package-lock.json  package.json  prepare-build.sh
(+48 files in other folders)
